--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
-
-
-    
-    
-    PDF to Image Conversion
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PDF to Image Conversion</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.8.162/pdf.min.js"></script>
     <style>
         #pdfImage {
@@ -12,22 +12,20 @@
             height: auto;
         }
     </style>
-
-
+</head>
+<body>
     <h1>PDF to Image Example</h1>
     <canvas id="pdfCanvas" style="display: none;"></canvas>
-    <img id="pdfImage" alt="PDF as Image" />
+    <img id="pdfImage" alt="PDF as Image">
 
     <script>
         const pdfUrl = 'https://mppsc.mp.gov.in/uploads/advertisement/Advt_State_Eligibility_Test_(SET)_2024_Dated_15_03_2024.pdf';
         const pdfjsLib = window['pdfjs-dist/build/pdf'];
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.8.162/pdf.worker.min.js';
 
-        // PDF को लोड करना
         pdfjsLib.getDocument(pdfUrl).promise.then(function(pdfDoc) {
-            // पहले पेज को लोड करना
             pdfDoc.getPage(1).then(function(page) {
-                const scale = 2; // स्केल बढ़ाएं ताकि इमेज स्पष्ट हो
+                const scale = 2; // स्केल बढ़ाएं
                 const viewport = page.getViewport({ scale: scale });
 
                 const canvas = document.getElementById('pdfCanvas');
@@ -40,16 +38,14 @@
                     viewport: viewport
                 };
 
-                // कैनवस पर पीडीएफ को रेंडर करें
                 page.render(renderContext).promise.then(function() {
-                    // कैनवस को इमेज में कन्वर्ट करें
                     const img = document.getElementById('pdfImage');
-                    img.src = canvas.toDataURL('image/png'); // PNG फॉर्मेट में सेट करें
+                    img.src = canvas.toDataURL('image/png');
                 });
             });
         }).catch(function(error) {
             console.error("Error loading PDF: ", error);
         });
     </script>
-
-</!doctype>
+</body>
+</html>
