--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <h1>PDF to Image Example</h1>
-    <canvas id="pdfCanvas" style="display: block;"></canvas>
+    <canvas id="pdfCanvas" style="display: none;"></canvas>
     <img id="pdfImage" alt="PDF as Image">
 
     <script>
