--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <div id="pdfImages"></div> <!-- सभी इमेज यहाँ दिखेंगी -->
 
     <script>
-        const pdfUrl = 'https://mppsc.mp.gov.in/uploads/advertisement/Advt_State_Eligibility_Test_(SET)_2024_Dated_15_03_2024.pdf';
+        // अपने GitHub Pages पर होस्ट किए गए PDF का URL डालें
+        const pdfUrl = 'https://your-github-username.github.io/your-repository-name/assets/your-pdf-file.pdf';
         const pdfjsLib = window['pdfjs-dist/build/pdf'];
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdn.jsdelivr.net/npm/pdfjs-dist/build/pdf.worker.min.js';
 
