--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF to Multiple Images</title>
+    <title>PDF to Multiple Images Example</title>
     <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist/build/pdf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist/build/pdf.worker.min.js"></script>
     <style>
@@ -16,22 +16,24 @@
     </style>
 </head>
 <body>
-    <h1>PDF to Multiple Images Example</h1>
-    <div id="pdfImages"></div> <!-- सभी इमेज यहाँ दिखेंगी -->
+    <h1>New update PDF to Multiple Images Example</h1>
+    <div id="pdfImages"></div> <!-- This is where all images will be shown -->
 
     <script>
-        const pdfUrl = 'https://mppsc.mp.gov.in/uploads/advertisement/Advt_State_Eligibility_Test_(SET)_2024_Dated_15_03_2024.pdf';
+        // Use the direct link to your uploaded PDF file in the GitHub Pages
+        const pdfUrl = 'https://hrideshinfotech.github.io/host-html/Advt_State_Eligibility_Test_(SET)_2024_Dated_15_03_2024.pdf';
+        
         const pdfjsLib = window['pdfjs-dist/build/pdf'];
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdn.jsdelivr.net/npm/pdfjs-dist/build/pdf.worker.min.js';
 
         pdfjsLib.getDocument(pdfUrl).promise.then(function(pdfDoc) {
-            const totalPages = pdfDoc.numPages;  // PDF में कुल पेज
-            const pdfImagesContainer = document.getElementById('pdfImages'); // जहां सभी पेज दिखेंगे
+            const totalPages = pdfDoc.numPages;  // Get total number of pages in the PDF
+            const pdfImagesContainer = document.getElementById('pdfImages'); // Where all images will be displayed
 
-            // सभी पेजों को लूप में कन्वर्ट करें
+            // Loop through all pages and render them as images
             for (let pageNum = 1; pageNum <= totalPages; pageNum++) {
                 pdfDoc.getPage(pageNum).then(function(page) {
-                    const scale = 1.5; // पेज का स्केल
+                    const scale = 1.5; // Scale factor for the page size
                     const viewport = page.getViewport({ scale: scale });
 
                     const canvas = document.createElement('canvas');
@@ -44,11 +46,12 @@
                         viewport: viewport
                     };
 
+                    // Render the page to the canvas
                     page.render(renderContext).promise.then(function() {
                         const img = document.createElement('img');
                         img.src = canvas.toDataURL('image/png');
                         img.classList.add('pdfPageImage');
-                        pdfImagesContainer.appendChild(img); // सभी इमेज को डिव में ऐड करें
+                        pdfImagesContainer.appendChild(img); // Append the image to the container
                     });
                 });
             }
@@ -56,6 +59,5 @@
             console.error("Error loading PDF: ", error);
         });
     </script>
-    end
 </body>
 </html>
